2007-10-01  Dan Williams  <dcbw@redhat.com>

	Patch from Matthias Clasen <mclasen@redhat.com>  (rh #307921)

	* src/applet.c
		- (nma_status_icon_size_changed_cb): actually redraw icons when the
			applet's size changes
		- (foo_wireless_state_change, foo_wired_state_change,
		   foo_device_state_changed_cb, foo_device_state_changed,
		   foo_device_added_cb, foo_client_state_change_cb,
		   foo_client_state_change, foo_setup_client_state_handlers,
		   foo_manager_running_cb, foo_manager_running, foo_set_initial_state,
		   foo_client_setup): add a 'synthetic' argument to functions that
			emit notifications to suppress notification events that are
			generated by internal state updates (ie, on launch when reading
			initial NM state)

2007-10-01  Dan Williams  <dcbw@redhat.com>

	Patch from Stéphane Loeuillet <leroutier@gmail.com>

	* nm-applet.desktop
		- Use XDG standard autostart directory
		- Bring up to spec; remove deprecated Encoding tag; remove --sm-disable
			because it's not session-managed anymore (rh #313031)

2007-10-01  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_send_event_notification, nma_show_notification_dialog): new
			functions; notify the user of important events via either the
			notification system or a dialog box
		- (show_vpn_state): notify the user of important VPN related events
		- (vpn_connection_state_changed): handle new 'reason' argument to
			VPN connection state changes
		- (foo_client_state_change): clear the VPN state when NM goes away

	* src/Makefile.am
		- remove standalone notification bits

2007-10-01  Tambet Ingo  <tambet@gmail.com>

	* src/applet.c (activate_device_cb): Implement a place holder which will show
	a beautiful error dialog if device activation fails.
	(nma_menu_item_activate): Use the new device activation method.

2007-10-01  Jeremy Katz  <katzj@redhat.com>

	* src/password-dialog.c, src/applet.glade:
	        - (showpasscb_toggled_cb): Hide password by default, cb to show
